[package]
name = "kanono-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
cgmath = "0.18.0"
futures-util = "0.3.17"
log = "0.4.14"
rand = "0.8.4"
simplelog = "0.11.0"
tokio = { version = "1.14.0", features = ["full"] }
tokio-stream = "0.1.8"
warp = "0.3.2"
fazo = { version = "1.0.0", path = "../fazo" }